--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
-    "mongodb": "^7.0.0"
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.1.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
